syntax = "proto3";
package dipstick.stack.v1;

import "dipstick/can/v1/bus.proto";
import "dipstick/core/v1/entity.proto";
import "dipstick/device/v1/ina2xx.proto";
import "dipstick/gpio/v1/chip.proto";
import "dipstick/shadow/v1/shadow.proto";
import "dipstick/spi/v1/device.proto";
import "dipstick/xcp/v1/a2l.proto";
import "dipstick/xcp/v1/session.proto";

message UnknownStackSpec {
  string version = 1;
}

message StackSpec {
  string version = 1;
  dipstick.core.v1.EntityMeta meta = 2;
  CanSpec can = 8;
  DeviceSpec device = 6;
  GpioSpec gpio = 4;
  repeated dipstick.shadow.v1.ShadowSpec shadow = 7;
  SpiSpec spi = 3;
  XcpSpec xcp = 5;
}

message CanSpec {
  repeated dipstick.can.v1.BusSpec bus = 1;
}

message DeviceSpec {
  repeated dipstick.device.v1.Ina2xxSpec ina2xx = 1;
}

message GpioSpec {
  repeated dipstick.gpio.v1.ChipSpec chip = 1;
}

message SpiSpec {
  repeated dipstick.spi.v1.DeviceSpec device = 1;
}

message XcpSpec {
  repeated dipstick.xcp.v1.A2lSpec a2l = 1;
  repeated dipstick.xcp.v1.SessionSpec session = 2;
}
